--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "server:dev": "nodemon server.js"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "gsap": "^3.13.0",
@@ -31,18 +33,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.2",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.22",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.2"
   }
 }
